# Luxonis-challenge

./: .env  .gitignore  README.md  docker-compose.yaml
backend/: Dockerfile  README.md  api.py  api_web.py  pyproject.toml  test_requests.txt
backend/db_abstraction/: db_model.py
backend/scraper/: spider.py
backend/scraper_api/: __init__.py  main.py  test_requests.txt
backend/scraper_api/sreality_scraper/: __init__.py  pipelines.py
backend/scraper_api/sreality_scraper/spiders/: flat_spider.py
backend/sreality_scraper/: __init__.py  pipelines.py  settings.py
backend/sreality_scraper/spiders/: flat_spider.py
backend/sreality_scraper/sreality_scraper/: settings.py
backend/sreality_scraper/sreality_scraper/spiders/: flat_spider.py
nginx/: Dockerfile  nginx.conf
nginx/static/: index.css  index.html  index.js
