[tool.poetry]
name = "Scraper-API"
version = "1.0"
description = "REST API for webpage scraping"
authors = ["Timotej979"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"

SQLAlchemy = "^1.4.39"

asyncio = "^3.4.3"
asyncpg = "^0.26.0"
aiohttp = "^3.8.1"
aiohttp-sqlalchemy = "^0.34.0"

scrapy = "^2.5.1"
scrapy-aiohttp = "^0.1.0"
twisted = "^22.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"