[tool.poetry]
name = "Scraper-API"
version = "1.0"
description = "REST API for webpage scraping"
authors = ["Timotej979"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"

psycopg2 = "^2.9.1"
SQLAlchemy = "^1.4.39"
flask_sqlalchemy = "^2.5.1"

flask = "^2.0.1"

scrapy = "^2.5.1"
billiard = "3.3.0.22"
twisted = "^22.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"