[tool.poetry]
name = "scraper_api"
version = "1.0"
description = "REST API for webpage scraping"
authors = ["Timotej979"]
readme = "README.md"
packages = [{include = "scraper_api"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"

flask = "^2.0.1"

psycopg2-binary = "^2.9.1"
SQLAlchemy = "^1.4.39"
flask_sqlalchemy = "^2.5.1"

scrapy = "^2.5.1"
twisted = "^22.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"